# mempalace

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  COLD_RESTART_PRESERVE.md  CONTRIBUTING.md  README.md  cross_encoder_eval_results.txt  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/commands/: help.md  init.md  status.md
.claude-plugin/hooks/: hooks.json  mempal-precompact-hook.sh  mempal-pretooluse-hook.sh  mempal-sessionstart-hook.sh  mempal-stop-hook.sh  mempal-userpromptsubmit-hook.sh
.claude-plugin/skills/mempalace/: SKILL.md
.codex-plugin/: plugin.json
.codex-plugin/skills/help/: SKILL.md
.codex-plugin/skills/init/: SKILL.md
.codex-plugin/skills/mine/: SKILL.md
.codex-plugin/skills/search/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  HYBRID_MODE.md  README.md  convomem_bench.py  longmemeval_bench.py
docs/: context_as_entity_redesign_plan.md  context_as_entity_redesign_status_morning.md  feedback_audit_2026_04_18.md  link_author_plan.md  link_author_scheduling.md  normalization_root_fix_plan.md  schema.sql
examples/: gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
integrations/openclaw/: SKILL.md
mempalace/: README.md  __init__.py  ascii_fold.py  auto_author.py  cli.py  config.py  convo_miner.py  dedup.py  dialect.py  entity_detector.py  entity_gate.py  entity_registry.py  eval_ce.py  eval_harness.py  general_extractor.py  hooks_cli.py  hyphen_id_migration.py  injection_gate.py  intent.py  knowledge_graph.py  layers.py  link_author.py  mcp_server.py  memory_gardener.py  migrate.py  miner.py  normalize.py  onboarding.py  palace.py  query_sanitizer.py  repair.py  scoring.py  searcher.py  seed.py  server_state.py  spellcheck.py  split_mega_files.py  state_schemas.py  tool_lifecycle.py  tool_mutate.py  (+2 more)
mempalace/instructions/: help.md  search.md  status.md
mempalace/migrations/: 001_initial_schema.sql  002_entity_metadata_columns.py  003_edge_traversal_feedback.sql  004_edge_context_id.sql  005_keyword_feedback.sql  006_scoring_weight_feedback.sql  007_context_and_keywords.sql  008_rename_drawer_to_memory.sql  009_composite_indexes_and_provenance.sql  010_normalize_predicate_hyphens.sql  011_conflict_resolutions.sql  012_drop_source_closet.sql  013_triple_statement.sql  014_context_as_entity.sql  015_retire_old_feedback.sql  016_keyword_idf.sql  017_link_prediction.sql  018_triple_context_feedback.sql  019_memory_flags.sql  020_memory_gardener_runs.sql  021_op_cluster_templatizable.sql  022_add_content_column.py  023_drop_description_column.py  024_state_revisions.sql  025_state_init_needed_flag.sql  026_state_revision_schema_version.sql  027_state_revision_session_id.sql  __init__.py
mempalace/state_migrations/: __init__.py
scripts/: backfill_op_args.py  backfill_summary_views.py  cleanup_chroma_orphans.py  cross_encoder_context_eval.py  cross_encoder_eval.py  migrate_legacy_ids.py  purge_em_dashes_in_db.py  reembed_similar_to_confidence.py  subset_500_pairs.json
tests/: conftest.py  test_blocking_escape_hatches.py  test_blocking_round_trips.py  test_channel_d_context_feedback.py  test_channel_rrf_weight_learning.py  test_channel_separation_2026_05_02.py  test_channel_weight_learning.py  test_chroma_queue_lag_smoke.py  test_cli.py  test_config.py  test_config_extra.py  test_congruence_audit_2026_05_01.py  test_context_accretion.py  test_context_emit_sites.py  test_convo_miner.py  test_convo_miner_unit.py  test_data_migrations_stamp_2026_05_02.py  test_declare_operation.py  test_dedup.py  test_dialect.py  test_double_load_and_bypass.py  test_enrichment_auto_accept.py  test_entity_detector.py  test_entity_gate.py  test_entity_registry.py  test_entity_system.py  test_eval_ce.py  test_eval_harness.py  test_finalize_coverage.py  test_gardener_schema_drift.py  test_general_extractor.py  test_graph_degree_dampening.py  test_hook_buckets.py  test_hooks_cli.py  test_hyphen_id_migration.py  test_injection_gate.py  test_instructions_cli.py  test_intent_system.py  test_keyword_idf.py  test_knowledge_graph.py  (+41 more)
tests/benchmarks/: README.md  data_generator.py  report.py  test_chromadb_stress.py  test_ingest_bench.py  test_knowledge_graph_bench.py  test_layers_bench.py  test_mcp_bench.py  test_memory_profile.py  test_palace_boost.py  test_recall_threshold.py  test_search_bench.py
tests/integration/: test_channel_d_context_feedback.py  test_channel_rrf_weight_learning.py  test_channel_separation_2026_05_02.py  test_channel_weight_learning.py  test_chroma_queue_lag_smoke.py  test_cli.py  test_congruence_audit_2026_05_01.py  test_context_accretion.py  test_context_emit_sites.py  test_convo_miner.py  test_convo_miner_unit.py  test_data_migrations_stamp_2026_05_02.py  test_dedup.py  test_double_load_and_bypass.py  test_entity_gate.py  test_entity_system.py  test_finalize_coverage.py  test_gardener_schema_drift.py  test_graph_degree_dampening.py  test_hyphen_id_migration.py  test_injection_gate.py  test_intent_system.py  test_keyword_idf.py  test_knowledge_graph.py  test_knowledge_graph_extra.py  test_layers.py  test_link_author_cli.py  test_link_prediction_candidates.py  test_mcp_server.py  test_mcp_startup.py  test_migration_014.py  test_migrations.py  test_miner.py  test_no_cross_agent_fallbacks.py  test_normalization_invariants.py  test_op_memory.py  test_operation_slots_slice12.py  test_query_sanitizer.py  test_rated_edge_supersede.py  test_render_consistency.py  (+15 more)
tests/unit/: test_config.py  test_config_extra.py  test_declare_operation.py  test_entity_detector.py  test_entity_registry.py  test_eval_ce.py  test_eval_harness.py  test_general_extractor.py  test_hook_buckets.py  test_hooks_cli.py  test_instructions_cli.py  test_link_author_api_key.py  test_mandatory_entities.py  test_normalize.py  test_onboarding.py  test_palace_path_hint.py  test_relevance_single_field.py  test_spellcheck.py  test_spellcheck_extra.py  test_split_mega_files.py  test_subagent_sid_isolation.py
(+5 files in other folders)
