[project]
name = "mempalace"
version = "3.1.12"
description = "Give your AI a memory -- mine projects and conversations into a searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.5.0,<0.7",
    "pyyaml>=6.0,<7",
    "yoyo-migrations>=8.0,<10",
    # Link-author pipeline (Commit 3). Anthropic async SDK for the
    # Opus-designs-Haiku-runs jury; python-dotenv for loading the
    # dedicated mempalace API key from <palace>/.env at process startup.
    # See docs/link_author_plan.md §2.8 + §5.5.1.
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    # ASCII transliteration for metadata fields (entity names, summary
    # what/why/scope, context queries/keywords). ISC-licensed, pure-Python,
    # MIT-compatible -- chosen over GPL `unidecode`. Long-form `content`
    # stays UTF-8 verbatim; only metadata is ASCII-folded. See
    # mempalace/ascii_fold.py and Adrian's design lock 2026-04-27.
    "anyascii>=0.3.2",
    # State-protocol v1 Slice B (Adrian Option B 2026-05-03). jsonpatch
    # applies RFC 6902 patches to current entity state when agents pass
    # state_deltas with status='changed' on declare_operation /
    # extend_feedback. jsonschema validates the resulting payload against
    # state_schemas.STATE_SCHEMAS[<schema_id>].json_schema. Both are
    # required for the state-delta path to work end-to-end; the
    # try/except ImportError fallbacks in intent.py exist only for
    # development environments that haven't reinstalled yet.
    "jsonpatch>=1.32",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/milla-jovovich/mempalace"
Repository = "https://github.com/milla-jovovich/mempalace"
"Bug Tracker" = "https://github.com/milla-jovovich/mempalace/issues"

[project.scripts]
mempalace = "mempalace:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4.0",
    "psutil>=5.9",
    "pre-commit>=3.0",
]
spellcheck = ["autocorrect>=2.0"]
# CE rerank evaluation harness (mempalace.eval_ce). Pulls
# sentence-transformers (which transitively needs torch). Heavy --
# kept optional so default installs stay light. Install with
# `pip install mempalace[eval]` when you want to run the harness.
# See mempalace/eval_ce.py for the design + usage.
eval = ["sentence-transformers>=3.0"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4.0",
    "psutil>=5.9",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["benchmarks", ".scratch"]

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["tests/manual", "tests/benchmarks"]
# Layout (Adrian directive 2026-05-06 -- canonical Okken / pytest-docs hybrid):
#   tests/unit/          @pytest.mark.unit       (pure functions, fast lane)
#   tests/integration/   @pytest.mark.integration (real Chroma / KG)
#   tests/benchmarks/    benchmark / slow / stress (opt-in)
#
# Quick reference:
#   pytest                          full default suite (unit + integration)
#   pytest tests/unit               fast lane (dir-based selection)
#   pytest tests/integration        integration lane (dir-based selection)
#   pytest -m unit                  fast lane (marker-based, equivalent)
#   pytest -m integration           integration lane (marker-based, equivalent)
#   pytest -m benchmark             scale/perf benchmarks (opt-in)
addopts = "-m 'not benchmark and not slow and not stress'"
markers = [
    "unit: fast tests with no ChromaDB / no mcp_server module state",
    "integration: tests that exercise ChromaDB or mcp_server globals",
    "benchmark: scale/performance benchmark tests",
    "slow: tests that take more than 30 seconds",
    "stress: destructive scale tests (100K+ records)",
]

[tool.coverage.run]
source = ["mempalace"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
